# NpcDialogueEngine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  NPC_Dialogue_Engine_기획서.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: CHANGELOG_v0.2.md  INTERVIEW_PREP.md  README_템플릿.md  기술_선택_근거.md  데모_시나리오.md  면접_예상_QA.md  차별화_포인트.md
monitoring/: prometheus.yml
scripts/: demo.py  evaluate.py  ingest.py
src/: config.py
src/api/: circuit_breaker.py  exceptions.py  guard.py  logging_config.py  main.py  metrics.py  middleware.py  rate_limiter.py  retry.py  schemas.py
src/db/: __init__.py  database.py  models.py
src/evaluation/: hallucination_check.py  persona_consistency.py  response_quality.py
src/frontend/: index.html  package.json  vite.config.ts
src/npc/: affinity.py  dialogue.py  emotion.py  intent.py  memory.py  persona.py
src/quest/: hint_engine.py  tracker.py  trigger.py
src/rag/: cache.py  chunker.py  evaluator.py  ingestion.py  reranker.py  retriever.py
tests/: conftest.py  evaluation_dataset.json  test_api.py  test_middleware.py  test_npc.py  test_quest.py  test_rag.py  test_security.py
worldbuilding/items/: armor.md  consumables.md  weapons.md
worldbuilding/lore/: factions.md  geography.md  history.md  magic_system.md
worldbuilding/npcs/: blacksmith_garon.md  guard_captain_thane.md  merchant_rico.md  witch_elara.md
worldbuilding/quests/: main_quest_01.md  main_quest_02.md  (+2 more)
(+13 files in other folders)
